added new functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(RMSE)
 export(coef_drag)
 export(conical_bathy)
 export(driver_aggregate)
+export(elevation_2_baro)
+export(est_lw_down)
 export(nldas_to_glm_drivers)
 export(wind_sheltering)
 import(data.table)
