add glm_run function that can be called on NML

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,10 @@ export(driver_aggregate)
 export(elevation_2_baro)
 export(est_lw_down)
 export(nldas_to_glm_drivers)
+export(run_glm_nml)
 export(wind_sheltering)
+import(GLMr)
 import(data.table)
 import(fasttime)
+import(glmtools)
 importFrom(zoo,rollapply)
