initial MVP of glm optimization function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(elevation_2_baro)
 export(est_lw_down)
 export(nldas_to_glm_drivers)
 export(run_glm_nml)
+export(run_glm_optim)
 export(wind_sheltering)
 import(GLMr)
 import(data.table)
